# books_rating

./: pyproject.toml
.github/workflows/: build_docker_image.yml  linters.yaml
docker/: build.dockerfile
src/app/: depends.py  models.py  serializers.py  views.py
src/app/alembic/versions/: 3f2d20b8fb01_.py
src/core/: app.py  config.py
