[tool.poetry]
name = "books_rating"
version = "0.1.0"
description = ""
authors = ["Bulat Kurbanov <kurbanovbul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
alembic = "^1.7.7"
ormar = {extras = ["postgresql"], version = "^0.11.0"}
uvicorn = {extras = ["standart"], version = "^0.17.6"}
orjson = "^3.6.7"
uvloop = "^0.16.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
